--- a/src/Viam.Net.Sdk.Core/Viam.Net.Sdk.Core.csproj
+++ b/src/Viam.Net.Sdk.Core/Viam.Net.Sdk.Core.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="Google.Protobuf" Version="3.21.2" />
     <PackageReference Include="Grpc.Net.Client" Version="2.47.0" />
     <PackageReference Include="NLog" Version="5.0.1" />
-    <PackageReference Include="SIPSorcery" Version="6.0.8" />
+    <PackageReference Include="Microsoft.MixedReality.WebRTC" Version="2.0.2" />
   </ItemGroup>
 
 </Project>
