--- a/src/Viam.Net.Sdk.Core/Viam.Net.Sdk.Core.csproj
+++ b/src/Viam.Net.Sdk.Core/Viam.Net.Sdk.Core.csproj
@@ -2,24 +2,22 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <TargetFrameworks>netstandard2.1</TargetFrameworks>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Google.Api.CommonProtos" Version="2.6.0" />
-    <PackageReference Include="Google.Protobuf" Version="3.21.2" />
+    <PackageReference Include="Google.Protobuf" Version="3.21.0" />
     <PackageReference Include="Grpc.Net.Client" Version="2.47.0" />
+    <PackageReference Include="Grpc.Net.Client.Web" Version="2.47.0" />
+    <PackageReference Include="Grpc.Core.Api" Version="2.47.0" />
     <PackageReference Include="NLog" Version="5.0.1" />
     <PackageReference Include="SIPSorcery" Version="6.0.9" />
 
-    <PackageReference 
-      Include="StyleCop.Analyzers" 
-      Version="1.2.0-beta.354"
-      PrivateAssets="all" 
-      Condition="$(MSBuildProjectExtension) == '.csproj'" 
-    />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.354" PrivateAssets="all" Condition="$(MSBuildProjectExtension) == '.csproj'" />
+
+    <PackageReference Include="System.Text.Json" Version="6.0.5" />
   </ItemGroup>
 
 </Project>
