--- a/examples/UnityApp/.gitignore
+++ b/examples/UnityApp/.gitignore
@@ -72,3 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 
 /[Aa]ssets/Viam.Net.Sdk.Core.dll
+/[Aa]ssets/Scripts/Parameters.cs*
