--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,8 @@ x64/
 x86/
 [Ww][Ii][Nn]32/
 [Aa][Rr][Mm]/
+# We need the Arm component code to be available, which the above line removes
+!src/Viam.Net.Sdk.Core/**/Arm
 [Aa][Rr][Mm]64/
 bld/
 [Bb]in/
