--- a/src/Viam.Net.Sdk.Core/Viam.Core.csproj
+++ b/src/Viam.Net.Sdk.Core/Viam.Core.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>.net6</TargetFramework>
     <Nullable>enable</Nullable>
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
@@ -18,7 +18,12 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="SIPSorcery" Version="6.2.1" />
+    <PackageReference Include="IndexRange" Version="1.0.3" />
+    <PackageReference Include="SIPSorcery" Version="6.2.3" />
+    <PackageReference Include="System.Net.Security" Version="4.3.2" />
     <PackageReference Include="System.Text.Json" Version="8.0.3" />
+  </ItemGroup>
+  <ItemGroup>
+	<InternalsVisibleTo Include="Viam.ModularResources" />
   </ItemGroup>
 </Project>
