--- a/src/Viam.ModularResources/Viam.ModularResources.csproj
+++ b/src/Viam.ModularResources/Viam.ModularResources.csproj
@@ -1,21 +1,36 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
-	<LangVersion>latest</LangVersion>
-	<!--<PublishTrimmed>true</PublishTrimmed>-->
-	<!--<PublishSingleFile>true</PublishSingleFile>-->
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<Nullable>enable</Nullable>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<LangVersion>latest</LangVersion>
+		<OutputType>Library</OutputType>
+		<!--<PublishTrimmed>true</PublishTrimmed>-->
+		<!--<PublishSingleFile>true</PublishSingleFile>-->
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Grpc.AspNetCore.Server" Version="2.62.0" />
-    <PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.62.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Grpc.AspNetCore.Server" Version="2.62.0" />
+		<PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.62.0" />
+		<PackageReference Include="ConfigureAwait.Fody" Version="3.3.2">
+			<PrivateAssets>all</PrivateAssets>
+		</PackageReference>
+		<PackageReference Include="Fody" Version="6.8.0">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\Viam.Core\Viam.Core.csproj" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<ProjectReference Include="..\Viam.Core\Viam.Core.csproj" />
+	</ItemGroup>
+	<PropertyGroup>
+		<WeaverConfiguration>
+			<Weavers>
+				<ConfigureAwait />
+				<MethodBoundaryAspect />
+			</Weavers>
+		</WeaverConfiguration>
+	</PropertyGroup>
 </Project>
