add a code formatter to run on build

--- a/src/Viam.Client/Viam.Client.csproj
+++ b/src/Viam.Client/Viam.Client.csproj
@@ -29,4 +29,7 @@
 			</Weavers>
 		</WeaverConfiguration>
 	</PropertyGroup>
+	<Target Name="FormatCode" BeforeTargets="BeforeBuild">
+		<Exec Command="dotnet format --exclude Proto/**" />
+	</Target>
 </Project>
