--- a/src/Viam.ModularResources/Viam.ModularResources.csproj
+++ b/src/Viam.ModularResources/Viam.ModularResources.csproj
@@ -33,4 +33,7 @@
 			</Weavers>
 		</WeaverConfiguration>
 	</PropertyGroup>
+	<Target Name="FormatCode" BeforeTargets="BeforeBuild">
+		<Exec Command="dotnet format --exclude Proto/**" />
+	</Target>
 </Project>
