--- a/.github/workflows/license-finder.yml
+++ b/.github/workflows/license-finder.yml
@@ -12,7 +12,7 @@ jobs:
     name: Audit 3rd-Party Licenses
     runs-on: ubuntu-latest
     container:
-      image: ghcr.io/viamrobotics/canon:arm64-cache
+      image: ghcr.io/viamrobotics/canon:amd64-cache
     timeout-minutes: 30
     env:
       DOTNET_NOLOGO: true
