--- a/src/Viam.ModularResources/Viam.ModularResources.csproj
+++ b/src/Viam.ModularResources/Viam.ModularResources.csproj
@@ -1,22 +1,20 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFrameworks>net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<LangVersion>latest</LangVersion>
 		<OutputType>Library</OutputType>
-		<!--<PublishTrimmed>true</PublishTrimmed>-->
-		<!--<PublishSingleFile>true</PublishSingleFile>-->
+		<IsAotCompatible>True</IsAotCompatible>
 	</PropertyGroup>
-
 	<ItemGroup>
-		<PackageReference Include="Grpc.AspNetCore.Server" Version="2.62.0" />
-		<PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.62.0" />
+		<PackageReference Include="Grpc.AspNetCore.Server" Version="2.67.0" />
+		<PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.67.0" />
 		<PackageReference Include="ConfigureAwait.Fody" Version="3.3.2">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
-		<PackageReference Include="Fody" Version="6.8.0">
+		<PackageReference Include="Fody" Version="6.9.2">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
