--- a/src/Viam.Core/Viam.Core.csproj
+++ b/src/Viam.Core/Viam.Core.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
+		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
 		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 		<IsAotCompatible>true</IsAotCompatible>
@@ -19,19 +19,19 @@
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
-		<PackageReference Include="Google.Protobuf" Version="3.30.0" />
+		<PackageReference Include="Google.Protobuf" Version="3.30.2" />
 		<PackageReference Include="Google.Api.CommonProtos" Version="2.16.0" />
-		<PackageReference Include="Grpc.Net.Client" Version="2.67.0" />
-		<PackageReference Include="Grpc.Net.ClientFactory" Version="2.67.0" />
-		<PackageReference Include="Grpc.Tools" Version="2.70.0">
+		<PackageReference Include="Grpc.Net.Client" Version="2.71.0" />
+		<PackageReference Include="Grpc.Net.ClientFactory" Version="2.71.0" />
+		<PackageReference Include="Grpc.Tools" Version="2.71.0">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
 		<PackageReference Include="IndexRange" Version="1.0.3" />
 		<PackageReference Include="MethodBoundaryAspect.Fody" Version="2.0.150" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.2" />
+		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
 		<PackageReference Include="System.Net.Security" Version="4.3.2" />
-		<PackageReference Include="System.Text.Json" Version="9.0.2" />
+		<PackageReference Include="System.Text.Json" Version="9.0.4" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Resources\Services\" />
@@ -43,5 +43,13 @@
 				<MethodBoundaryAspect GenerateXsd="false" />
 			</Weavers>
 		</WeaverConfiguration>
+	</PropertyGroup>
+	<PropertyGroup>
+		<PackageId>Viam.Core</PackageId>
+		<Version>0.0.0-dev</Version>
+		<Authors>TheGreatCO</Authors>
+		<Description>Viam Core Library</Description>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+		<!-- optional -->
 	</PropertyGroup>
 </Project>
