--- a/src/Viam.ModularResources/Viam.ModularResources.csproj
+++ b/src/Viam.ModularResources/Viam.ModularResources.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<PropertyGroup>
-		<TargetFrameworks>net6.0;net7.0;net8.0;net9.0</TargetFrameworks>
+		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<LangVersion>latest</LangVersion>
@@ -9,8 +9,8 @@
 		<IsAotCompatible>True</IsAotCompatible>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Grpc.AspNetCore.Server" Version="2.67.0" />
-		<PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.67.0" />
+		<PackageReference Include="Grpc.AspNetCore.Server" Version="2.71.0" />
+		<PackageReference Include="Grpc.AspNetCore.Server.Reflection" Version="2.71.0" />
 		<PackageReference Include="ConfigureAwait.Fody" Version="3.3.2">
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
@@ -30,5 +30,13 @@
 				<MethodBoundaryAspect />
 			</Weavers>
 		</WeaverConfiguration>
+	</PropertyGroup>
+	<PropertyGroup>
+		<PackageId>Viam.ModularResources</PackageId>
+		<Version>0.0.0-dev</Version>
+		<Authors>TheGreatCO</Authors>
+		<Description>Viam ModularResources Library</Description>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+		<!-- optional -->
 	</PropertyGroup>
 </Project>
