reworked it to use the rust libs, now webrtc seems to be working

--- a/examples/SimpleModule/SimpleModule.csproj
+++ b/examples/SimpleModule/SimpleModule.csproj
@@ -11,6 +11,7 @@
 		<PublishSingleFile>false</PublishSingleFile>
 		<PublishAot>true</PublishAot>
 		<IsAotCompatible>true</IsAotCompatible>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
