--- a/examples/SimpleAuth/Client/SimpleAuth.csproj
+++ b/examples/SimpleAuth/Client/SimpleAuth.csproj
@@ -7,6 +7,7 @@
 		<Nullable>enable</Nullable>
 		<PublishAot>true</PublishAot>
 		<TrimmerSingleWarn>false</TrimmerSingleWarn>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
