--- a/src/Viam.ModularResources/Viam.ModularResources.csproj
+++ b/src/Viam.ModularResources/Viam.ModularResources.csproj
@@ -7,6 +7,7 @@
 		<LangVersion>latest</LangVersion>
 		<OutputType>Library</OutputType>
 		<IsAotCompatible>True</IsAotCompatible>
+		<Platforms>AnyCPU;x64</Platforms>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Grpc.AspNetCore.Server" Version="2.71.0" />
