--- a/src/Viam.Client/Viam.Client.csproj
+++ b/src/Viam.Client/Viam.Client.csproj
@@ -6,7 +6,7 @@
 		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 		<TrimmerSingleWarn>false</TrimmerSingleWarn>
-		<Platforms>AnyCPU;x64</Platforms>
+		<Platforms>AnyCPU</Platforms>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -43,17 +43,47 @@
 		<!-- optional -->
 	</PropertyGroup>
 	<ItemGroup>
-		<NativeLibrary Include="runtimes\win-x64\native\libviam_rust_utils-windows_x86_64.dll">
+		<Content Include="native\win-x64\viam_rust_utils_lib.dll">
+			<Pack>true</Pack>
+			<PackagePath>runtimes\win-x64\native\</PackagePath>
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</NativeLibrary>
-		<NativeLibrary Include="runtimes\linux-x64\native\libviam_rpc_client.so">
+		</Content>
+
+		<Content Include="native\linux-x64\libviam_rust_utils.so">
+			<Pack>true</Pack>
+			<PackagePath>runtimes\linux-x64\native\</PackagePath>
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</NativeLibrary>
-		<NativeLibrary Include="runtimes\osx-arm64\native\libviam_rpc_client.dylib">
+		</Content>
+
+		<Content Include="native\linux-arm64\libviam_rust_utils.so">
+			<Pack>true</Pack>
+			<PackagePath>runtimes\linux-arm64\native\</PackagePath>
 			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		</NativeLibrary>
-	</ItemGroup>
-	<ItemGroup>
-		<None Include="runtimes\**" CopyToOutputDirectory="PreserveNewest" />
+		</Content>
+
+		<Content Include="native\linux-musl-x64\libviam_rust_utils.so">
+			<Pack>true</Pack>
+			<PackagePath>runtimes\linux-musl-x64\native\</PackagePath>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+
+		<Content Include="native\linux-musl-arm64\libviam_rust_utils.so">
+			<Pack>true</Pack>
+			<PackagePath>runtimes\linux-musl-arm64\native\</PackagePath>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+
+		<Content Include="native\osx-arm64\libviam_rust_utils.dylib">
+			<Pack>true</Pack>
+			<PackagePath>runtimes\osx-arm64\native\</PackagePath>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+
+		<Content Include="native\osx-x64\libviam_rust_utils.dylib">
+			<Pack>true</Pack>
+			<PackagePath>runtimes\osx-x64\native\</PackagePath>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+		</Content>
+
 	</ItemGroup>
 </Project>
