--- a/src/Viam.Core/Viam.Core.csproj
+++ b/src/Viam.Core/Viam.Core.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.1</TargetFrameworks>
+		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
 		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
 		<TrimmerSingleWarn>false</TrimmerSingleWarn>
@@ -29,12 +29,22 @@
 		</PackageReference>
 		<PackageReference Include="IndexRange" Version="1.0.3" />
 		<PackageReference Include="MethodBoundaryAspect.Fody" Version="2.0.150" />
+		<PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.13.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
 		<PackageReference Include="System.Net.Security" Version="4.3.2" />
 		<PackageReference Include="System.Text.Json" Version="9.0.4" />
 	</ItemGroup>
 	<ItemGroup>
 	  <Folder Include="Resources\Services\" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Viam.Serialization\Viam.Serialization.csproj"
+                    OutputItemType="Analyzer"
+                    ReferenceOutputAssembly="false" />
+		<Analyzer Include="..\Viam.Serialization\bin\$(Configuration)\netstandard2.0\Viam.Serialization.dll" Pack="true" PackagePath="analyzers/dotnet/cs" />
+		<None Include="..\Viam.Serialization\bin\$(Configuration)\netstandard2.0\Viam.Serialization.dll"
+			  Pack="true"
+			  PackagePath="analyzers/dotnet/cs" />
 	</ItemGroup>
 	<PropertyGroup>
 		<WeaverConfiguration>
@@ -49,7 +59,7 @@
 		<Version>0.0.0-dev</Version>
 		<Authors>TheGreatCO</Authors>
 		<Description>Viam Core Library</Description>
-		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<!-- optional -->
 	</PropertyGroup>
 </Project>
