lots of updates, added support for source generator serializers to help with protos and dictionaries

--- a/examples/SimpleModule/appsettings.json
+++ b/examples/SimpleModule/appsettings.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Trace",
-      "Microsoft.AspNetCore": "Trace"
+      "Microsoft.AspNetCore.*": "Error",
+      "Grpc.AspNetCore.*": "Information"
     }
   },
   "AllowedHosts": "*"
