--- a/.editorconfig
+++ b/.editorconfig
@@ -1,179 +1,58 @@
+[*.cs]
+# Public properties should be PascalCase
+dotnet_naming_rule.public_properties_should_be_pascal_case.severity = suggestion
+dotnet_naming_rule.public_properties_should_be_pascal_case.symbols = public_properties
+dotnet_naming_rule.public_properties_should_be_pascal_case.style = pascal_case_style
 
-[*.{appxmanifest,axml,build,c,c++,c++m,cc,ccm,cginc,compute,config,cp,cpp,cppm,csproj,cu,cuh,cxx,cxxm,dbml,discomap,dtd,fx,fxh,h,hh,hlsl,hlsli,hlslinc,hpp,hxx,inc,inl,ino,ipp,ixx,jsproj,lsproj,mpp,mq4,mq5,mqh,mxx,njsproj,nuspec,proj,props,resw,resx,StyleCop,targets,tasks,tpp,usf,ush,vbproj,xml,xsd}]
-indent_style=tab
-indent_size=tab
-tab_width=4
+# Private properties and fields should be _camelCase
+dotnet_naming_rule.private_members_should_be_camel_case.severity = suggestion
+dotnet_naming_rule.private_members_should_be_camel_case.symbols = private_members
+dotnet_naming_rule.private_members_should_be_camel_case.style = camel_case_with_underscore_style
 
-[*.{asax,ascx,aspx,axaml,cs,cshtml,htm,html,master,paml,razor,skin,vb,xaml,xamlx,xoml}]
-indent_style=space
-indent_size= 4
-tab_width= 4
+# Protected properties and fields should be PascalCase
+dotnet_naming_rule.protected_members_should_be_pascal_case.severity = suggestion
+dotnet_naming_rule.protected_members_should_be_pascal_case.symbols = protected_members
+dotnet_naming_rule.protected_members_should_be_pascal_case.style = pascal_case_style
 
-[*]
+# Define symbols for public properties
+dotnet_naming_symbols.public_properties.applicable_kinds = property
+dotnet_naming_symbols.public_properties.applicable_accessibilities = public
+dotnet_naming_symbols.public_properties.required_modifiers = none
 
-# Microsoft .NET properties
-csharp_preferred_modifier_order=public, private, protected, internal, file, new, static, abstract, virtual, sealed, readonly, override, extern, unsafe, volatile, async, required:suggestion
-csharp_style_prefer_utf8_string_literals= true:suggestion
-csharp_style_var_elsewhere=true:suggestion
-csharp_style_var_for_built_in_types=true:error
-csharp_style_var_when_type_is_apparent=true:suggestion
-dotnet_naming_rule.property_rule.import_to_resharper=as_predefined
-dotnet_naming_rule.property_rule.resharper_style=aaBb, AaBb
-dotnet_naming_rule.property_rule.severity = warning
-dotnet_naming_rule.property_rule.style = lower_camel_case_style
-dotnet_naming_rule.property_rule.symbols=property_symbols
-dotnet_naming_style.lower_camel_case_style.capitalization=camel_case
-dotnet_naming_symbols.property_symbols.applicable_accessibilities=*
-dotnet_naming_symbols.property_symbols.applicable_kinds=property
-dotnet_style_parentheses_in_arithmetic_binary_operators= never_if_unnecessary:none
-dotnet_style_parentheses_in_other_binary_operators= always_for_clarity:none
-dotnet_style_parentheses_in_relational_binary_operators= never_if_unnecessary:none
-dotnet_style_predefined_type_for_locals_parameters_members= true:suggestion
-dotnet_style_predefined_type_for_member_access= true:suggestion
-dotnet_style_qualification_for_event=false:suggestion
-dotnet_style_qualification_for_field= false:suggestion
-dotnet_style_qualification_for_method=false:suggestion
-dotnet_style_qualification_for_property= false:suggestion
-dotnet_style_require_accessibility_modifiers= for_non_interface_members:suggestion
+# Define symbols for private members (fields and properties)
+dotnet_naming_symbols.private_members.applicable_kinds = field, property
+dotnet_naming_symbols.private_members.applicable_accessibilities = private
+dotnet_naming_symbols.private_members.required_modifiers = none
 
-# ReSharper properties
-resharper_align_linq_query=true
-resharper_align_multiline_argument=true
-resharper_align_multiline_array_and_object_initializer=true
-resharper_align_multiline_binary_patterns=true
-resharper_align_multiline_calls_chain=true
-resharper_align_multiline_expression=true
-resharper_align_multiline_extends_list=true
-resharper_align_multiline_for_stmt=true
-resharper_align_multiline_parameter=true
-resharper_align_multiline_switch_expression=true
-resharper_align_multiple_declaration=true
-resharper_align_multline_type_parameter_constrains=true
-resharper_align_multline_type_parameter_list=true
-resharper_align_tuple_components=true
-resharper_blank_lines_after_multiline_statements=1
-resharper_braces_for_for=required
-resharper_braces_for_foreach=required
-resharper_braces_for_ifelse=required_for_multiline_statement
-resharper_braces_for_while=required
-resharper_csharp_insert_final_newline=true
-resharper_csharp_int_align_comments=true
-resharper_csharp_outdent_commas=true
-resharper_csharp_stick_comment=false
-resharper_csharp_use_indent_from_vs=false
-resharper_csharp_wrap_arguments_style=chop_if_long
-resharper_csharp_wrap_before_binary_opsign=true
-resharper_csharp_wrap_multiple_type_parameter_constraints_style=chop_always
-resharper_csharp_wrap_parameters_style=chop_if_long
-resharper_csharp_wrap_ternary_expr_style=chop_always
-resharper_int_align_invocations=true
-resharper_int_align_nested_ternary=true
-resharper_int_align_property_patterns=true
-resharper_int_align_switch_expressions=true
-resharper_int_align_switch_sections=true
-resharper_keep_existing_declaration_parens_arrangement=false
-resharper_keep_existing_embedded_arrangement=false
-resharper_keep_existing_initializer_arrangement=false
-resharper_max_array_initializer_elements_on_line=5
-resharper_max_formal_parameters_on_line=4
-resharper_max_initializer_elements_on_line=5
-resharper_max_invocation_arguments_on_line=5
-resharper_method_or_operator_body=expression_body
-resharper_outdent_binary_ops=true
-resharper_outdent_statement_labels=true
-resharper_place_accessorholder_attribute_on_same_line=false
-resharper_place_constructor_initializer_on_same_line=false
-resharper_place_field_attribute_on_same_line=false
-resharper_place_simple_embedded_statement_on_same_line=false
-resharper_show_autodetect_configure_formatting_tip=false
-resharper_wrap_array_initializer_style=chop_if_long
-resharper_wrap_before_extends_colon=true
-resharper_wrap_before_linq_expression=true
-resharper_wrap_chained_binary_expressions=chop_if_long
-resharper_wrap_chained_method_calls=chop_always
+# Define symbols for protected members (fields and properties)
+dotnet_naming_symbols.protected_members.applicable_kinds = field, property
+dotnet_naming_symbols.protected_members.applicable_accessibilities = protected
+dotnet_naming_symbols.protected_members.required_modifiers = none
 
-# ReSharper inspection severities
-resharper_arrange_attributes_highlighting=error
-resharper_arrange_method_or_operator_body_highlighting=suggestion
-resharper_arrange_redundant_parentheses_highlighting=hint
-resharper_arrange_this_qualifier_highlighting=hint
-resharper_arrange_type_member_modifiers_highlighting=hint
-resharper_arrange_type_modifiers_highlighting=hint
-resharper_built_in_type_reference_style_for_member_access_highlighting=hint
-resharper_built_in_type_reference_style_highlighting=hint
-resharper_enforce_do_while_statement_braces_highlighting=error
-resharper_enforce_fixed_statement_braces_highlighting=error
-resharper_enforce_foreach_statement_braces_highlighting=error
-resharper_enforce_for_statement_braces_highlighting=error
-resharper_enforce_lock_statement_braces_highlighting=error
-resharper_enforce_using_statement_braces_highlighting=error
-resharper_enforce_while_statement_braces_highlighting=error
-resharper_redundant_base_qualifier_highlighting=warning
-resharper_suggest_var_or_type_elsewhere_highlighting=hint
-resharper_suggest_var_or_type_simple_types_highlighting=error
-dotnet_style_operator_placement_when_wrapping = beginning_of_line
-end_of_line = crlf
-csharp_indent_labels = one_less_than_current
-dotnet_style_coalesce_expression = true:suggestion
-dotnet_style_null_propagation = true:suggestion
-dotnet_style_prefer_is_null_check_over_reference_equality_method = true:suggestion
-dotnet_style_prefer_auto_properties = true:silent
-dotnet_style_object_initializer = true:suggestion
-dotnet_style_collection_initializer = true:suggestion
-dotnet_style_prefer_simplified_boolean_expressions = true:suggestion
-dotnet_style_prefer_conditional_expression_over_assignment = true:silent
-dotnet_style_prefer_conditional_expression_over_return = true:silent
-dotnet_style_explicit_tuple_names = true:suggestion
-dotnet_style_prefer_inferred_tuple_names = true:suggestion
-dotnet_style_prefer_inferred_anonymous_type_member_names = true:suggestion
-dotnet_style_prefer_compound_assignment = true:suggestion
-dotnet_style_prefer_simplified_interpolation = true:suggestion
-dotnet_style_prefer_collection_expression = when_types_loosely_match:suggestion
-dotnet_style_namespace_match_folder = true:suggestion
-csharp_using_directive_placement = outside_namespace:error
-csharp_prefer_simple_using_statement = true:suggestion
-csharp_prefer_braces = true:silent
-csharp_style_namespace_declarations = block_scoped:silent
-csharp_style_prefer_method_group_conversion = true:silent
-csharp_style_prefer_top_level_statements = true:silent
-csharp_style_prefer_primary_constructors = true:suggestion
-csharp_style_expression_bodied_methods = false:silent
-csharp_style_expression_bodied_constructors = false:silent
-csharp_style_expression_bodied_operators = false:silent
-csharp_style_expression_bodied_properties = true:silent
-csharp_style_expression_bodied_indexers = true:silent
-csharp_style_expression_bodied_accessors = true:silent
-csharp_style_expression_bodied_lambdas = true:silent
-csharp_style_expression_bodied_local_functions = false:silent
-csharp_style_throw_expression = true:suggestion
-csharp_style_prefer_null_check_over_type_check = true:suggestion
-csharp_prefer_simple_default_expression = true:error
-csharp_style_prefer_local_over_anonymous_function = true:suggestion
-csharp_style_prefer_index_operator = true:suggestion
-csharp_style_prefer_range_operator = true:suggestion
-csharp_style_implicit_object_creation_when_type_is_apparent = true:suggestion
-csharp_style_prefer_tuple_swap = true:suggestion
-csharp_style_inlined_variable_declaration = true:suggestion
-dotnet_style_readonly_field = true:suggestion
-csharp_style_deconstructed_variable_declaration = true:suggestion
-csharp_style_unused_value_expression_statement_preference = discard_variable:silent
-csharp_style_unused_value_assignment_preference = discard_variable:suggestion
-csharp_prefer_static_local_function = true:suggestion
-csharp_style_prefer_readonly_struct = true:suggestion
-dotnet_style_allow_multiple_blank_lines_experimental = true:silent
-dotnet_style_allow_statement_immediately_after_block_experimental = true:silent
-dotnet_code_quality_unused_parameters = all:suggestion
-csharp_style_prefer_readonly_struct_member = true:suggestion
-csharp_style_allow_embedded_statements_on_same_line_experimental = true:silent
-csharp_style_allow_blank_line_after_colon_in_constructor_initializer_experimental = true:silent
-csharp_style_allow_blank_lines_between_consecutive_braces_experimental = true:silent
-csharp_style_allow_blank_line_after_token_in_arrow_expression_clause_experimental = true:silent
-csharp_style_allow_blank_line_after_token_in_conditional_expression_experimental = true:silent
-csharp_style_conditional_delegate_call = true:suggestion
-dotnet_style_parentheses_in_other_operators = never_if_unnecessary:silent
-csharp_style_prefer_switch_expression = true:suggestion
-csharp_style_prefer_pattern_matching = true:silent
-csharp_style_pattern_matching_over_is_with_cast_check = true:suggestion
-csharp_style_pattern_matching_over_as_with_null_check = true:suggestion
-csharp_style_prefer_not_pattern = true:suggestion
-csharp_style_prefer_extended_property_pattern = true:suggestion
+# Define PascalCase style
+dotnet_naming_style.pascal_case_style.capitalization = pascal_case
+
+# Define _camelCase style
+dotnet_naming_style.camel_case_with_underscore_style.capitalization = camel_case
+dotnet_naming_style.camel_case_with_underscore_style.required_prefix = _
+
+# Primary Constructor Arguemtns should be PascalCase
+dotnet_naming_rule.primary_constructor_arguments_should_be_pascal_case.severity = suggestion
+dotnet_naming_rule.primary_constructor_arguments_should_be_pascal_case.symbols = primary_constructor_arguments
+dotnet_naming_rule.primary_constructor_arguments_should_be_pascal_case.style = pascal_case_style
+
+dotnet_naming_symbols.primary_constructor_arguments.applicable_kinds = parameter
+dotnet_naming_symbols.primary_constructor_arguments.applicable_accessibilities = *
+dotnet_naming_symbols.primary_constructor_arguments.required_modifiers = none
+
+dotnet_naming_style.pascal_case_style.capitalization = pascal_case
+
+# Method parameters should be camelCase
+dotnet_naming_rule.method_parameters_should_be_camel_case.severity = suggestion
+dotnet_naming_rule.method_parameters_should_be_camel_case.symbols = method_parameters
+dotnet_naming_rule.method_parameters_should_be_camel_case.style = camel_case_style
+
+dotnet_naming_symbols.method_parameters.applicable_kinds = parameter
+dotnet_naming_symbols.method_parameters.applicable_accessibilities = *
+
+dotnet_naming_style.camel_case_style.capitalization = camel_case
