--- a/examples/SimpleAuth/Client/SimpleAuth.csproj
+++ b/examples/SimpleAuth/Client/SimpleAuth.csproj
@@ -5,8 +5,7 @@
 		<TargetFramework>net8.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<PublishAot>true</PublishAot>
-		<TrimmerSingleWarn>false</TrimmerSingleWarn>
+		<PublishSingleFile>true</PublishSingleFile>
 		<Platforms>AnyCPU</Platforms>
 	</PropertyGroup>
 
