--- a/examples/SimpleModule/SimpleModule.csproj
+++ b/examples/SimpleModule/SimpleModule.csproj
@@ -7,10 +7,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<LangVersion>latest</LangVersion>
-		<PublishTrimmed>true</PublishTrimmed>
-		<PublishSingleFile>false</PublishSingleFile>
-		<PublishAot>true</PublishAot>
-		<IsAotCompatible>true</IsAotCompatible>
+		<PublishSingleFile>true</PublishSingleFile>
 		<Platforms>AnyCPU</Platforms>
 	</PropertyGroup>
 	<PropertyGroup>
