--- a/examples/SimpleModule/appsettings.Development.json
+++ b/examples/SimpleModule/appsettings.Development.json
@@ -1,8 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Trace",
-      "Microsoft.AspNetCore": "Trace"
+      "Default": "Debug",
+      "Microsoft.AspNetCore.*": "Error",
+      "Grpc.AspNetCore.*": "Information"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
