--- a/src/Viam.Client/Viam.Client.csproj
+++ b/src/Viam.Client/Viam.Client.csproj
@@ -7,11 +7,14 @@
 		<LangVersion>latest</LangVersion>
 		<TrimmerSingleWarn>false</TrimmerSingleWarn>
 		<Platforms>AnyCPU</Platforms>
-	</PropertyGroup>
 
-	<ItemGroup>
-	  <None Remove="runtimes\win-x64\native\libviam_rust_utils-windows_x86_64.dll" />
-	</ItemGroup>
+    <PackageId>Viam.Client</PackageId>
+    <Version>0.0.0-dev</Version>
+    <Authors>TheGreatCO</Authors>
+    <Description>Viam Client Library</Description>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+	</PropertyGroup>
 
 	<ItemGroup>
 		<ProjectReference Include="..\Viam.Core\Viam.Core.csproj" />
@@ -35,56 +38,48 @@
 			</Weavers>
 		</WeaverConfiguration>
 	</PropertyGroup>
-	<PropertyGroup>
-		<PackageId>Viam.Client</PackageId>
-		<Version>0.0.0-dev</Version>
-		<Authors>TheGreatCO</Authors>
-		<Description>Viam Client Library</Description>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<!-- optional -->
-	</PropertyGroup>
 	<ItemGroup>
 
-		<Content Include="native\win-x64\libviam_rust_utils.dll">
+		<Content Include="runtimes\native\win-x64\libviam_rust_utils.dll">
 			<Pack>true</Pack>
 			<PackagePath>runtimes\win-x64\native\</PackagePath>
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
 
-		<Content Include="native\linux-x64\libviam_rust_utils.so">
+		<Content Include="runtimes\native\linux-x64\libviam_rust_utils.so">
 			<Pack>true</Pack>
 			<PackagePath>runtimes\linux-x64\native\</PackagePath>
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
 
-		<Content Include="native\linux-arm64\libviam_rust_utils.so">
+		<Content Include="runtimes\native\linux-arm64\libviam_rust_utils.so">
 			<Pack>true</Pack>
 			<PackagePath>runtimes\linux-arm64\native\</PackagePath>
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
 
-		<Content Include="native\linux-musl-x64\libviam_rust_utils.so">
+		<Content Include="runtimes\native\linux-musl-x64\libviam_rust_utils.so">
 			<Pack>true</Pack>
 			<PackagePath>runtimes\linux-musl-x64\native\</PackagePath>
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
 
-		<Content Include="native\linux-musl-arm64\libviam_rust_utils.so">
+		<Content Include="runtimes\native\linux-musl-arm64\libviam_rust_utils.so">
 			<Pack>true</Pack>
 			<PackagePath>runtimes\linux-musl-arm64\native\</PackagePath>
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
 
-		<Content Include="native\osx-arm64\libviam_rust_utils.dylib">
+		<Content Include="runtimes\native\osx-arm64\libviam_rust_utils.dylib">
 			<Pack>true</Pack>
 			<PackagePath>runtimes\osx-arm64\native\</PackagePath>
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
 
-		<Content Include="native\osx-x64\libviam_rust_utils.dylib">
+		<Content Include="runtimes\native\osx-x64\libviam_rust_utils.dylib">
 			<Pack>true</Pack>
 			<PackagePath>runtimes\osx-x64\native\</PackagePath>
-			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
 
 	</ItemGroup>
