--- a/src/Viam.Core/Viam.Core.csproj
+++ b/src/Viam.Core/Viam.Core.csproj
@@ -1,65 +1,55 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
-		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
-		<Nullable>enable</Nullable>
-		<LangVersion>latest</LangVersion>
-		<TrimmerSingleWarn>false</TrimmerSingleWarn>
-		<Platforms>AnyCPU</Platforms>
-	</PropertyGroup>
-	<ItemGroup>
-		<Compile Remove="Protos\**" />
-		<EmbeddedResource Remove="Protos\**" />
-		<None Remove="Protos\**" />
-	</ItemGroup>
-	<ItemGroup>
-		<PackageReference Include="ConfigureAwait.Fody" Version="3.3.2">
-			<PrivateAssets>all</PrivateAssets>
-		</PackageReference>
-		<PackageReference Include="Fody" Version="6.9.2">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="Google.Protobuf" Version="3.30.2" />
-		<PackageReference Include="Google.Api.CommonProtos" Version="2.16.0" />
-		<PackageReference Include="Grpc.Net.Client" Version="2.71.0" />
-		<PackageReference Include="Grpc.Net.ClientFactory" Version="2.71.0" />
-		<PackageReference Include="Grpc.Tools" Version="2.71.0">
-			<PrivateAssets>all</PrivateAssets>
-			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-		</PackageReference>
-		<PackageReference Include="IndexRange" Version="1.0.3" />
-		<PackageReference Include="MethodBoundaryAspect.Fody" Version="2.0.150" />
-		<PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.13.0" />
-		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
-		<PackageReference Include="System.Net.Security" Version="4.3.2" />
-		<PackageReference Include="System.Text.Json" Version="9.0.4" />
-	</ItemGroup>
-	<ItemGroup>
-	  <Folder Include="Resources\Services\" />
-	</ItemGroup>
-	<ItemGroup>
-		<ProjectReference Include="..\Viam.Serialization\Viam.Serialization.csproj"
-                    OutputItemType="Analyzer"
-                    ReferenceOutputAssembly="false" />
-		<Analyzer Include="..\Viam.Serialization\bin\$(Configuration)\netstandard2.0\Viam.Serialization.dll" Pack="true" PackagePath="analyzers/dotnet/cs" />
-		<None Include="..\Viam.Serialization\bin\$(Configuration)\netstandard2.0\Viam.Serialization.dll"
-			  Pack="true"
-			  PackagePath="analyzers/dotnet/cs" />
-	</ItemGroup>
-	<PropertyGroup>
-		<WeaverConfiguration>
-			<Weavers>
-				<ConfigureAwait />
-				<MethodBoundaryAspect GenerateXsd="false" />
-			</Weavers>
-		</WeaverConfiguration>
-	</PropertyGroup>
-	<PropertyGroup>
-		<PackageId>Viam.Core</PackageId>
-		<Version>0.0.0-dev</Version>
-		<Authors>TheGreatCO</Authors>
-		<Description>Viam Core Library</Description>
-		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<!-- optional -->
-	</PropertyGroup>
+  <PropertyGroup>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+    <Nullable>enable</Nullable>
+    <LangVersion>latest</LangVersion>
+    <TrimmerSingleWarn>false</TrimmerSingleWarn>
+    <Platforms>AnyCPU</Platforms>
+
+    <PackageId>Viam.Core</PackageId>
+    <Version>0.0.0-dev</Version>
+    <Authors>TheGreatCO</Authors>
+    <Description>Viam Core Library</Description>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="Protos\**" />
+    <EmbeddedResource Remove="Protos\**" />
+    <None Remove="Protos\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="ConfigureAwait.Fody" Version="3.3.2">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Fody" Version="6.9.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Google.Protobuf" Version="3.30.2" />
+    <PackageReference Include="Google.Api.CommonProtos" Version="2.16.0" />
+    <PackageReference Include="Grpc.Net.Client" Version="2.71.0" />
+    <PackageReference Include="Grpc.Net.ClientFactory" Version="2.71.0" />
+    <PackageReference Include="Grpc.Tools" Version="2.71.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="IndexRange" Version="1.0.3" />
+    <PackageReference Include="MethodBoundaryAspect.Fody" Version="2.0.150" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.5.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.4" />
+    <PackageReference Include="System.Net.Security" Version="4.3.2" />
+    <PackageReference Include="System.Text.Json" Version="9.0.4" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\Services\" />
+    <Folder Include="Serialization\" />
+  </ItemGroup>
+  <PropertyGroup>
+    <WeaverConfiguration>
+      <Weavers>
+        <ConfigureAwait />
+        <MethodBoundaryAspect GenerateXsd="false" />
+      </Weavers>
+    </WeaverConfiguration>
+  </PropertyGroup>
 </Project>
