--- a/src/Viam.Client/Viam.Client.csproj
+++ b/src/Viam.Client/Viam.Client.csproj
@@ -10,8 +10,10 @@
 
     <PackageId>Viam.Client</PackageId>
     <Version>0.0.0-dev</Version>
-    <Authors>TheGreatCO</Authors>
+    <Authors>Viam</Authors>
     <Description>Viam Client Library</Description>
+    <ProjectUrl>https://github.com/viamrobotics/viam-dotnet-sdk</ProjectUrl>
+    <PackageTags>viam</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
