--- a/src/Viam.ModularResources/Viam.ModularResources.csproj
+++ b/src/Viam.ModularResources/Viam.ModularResources.csproj
@@ -11,8 +11,10 @@
 
     <PackageId>Viam.ModularResources</PackageId>
     <Version>0.0.0-dev</Version>
-    <Authors>TheGreatCO</Authors>
+    <Authors>Viam</Authors>
     <Description>Viam ModularResources Library</Description>
+    <ProjectUrl>https://github.com/viamrobotics/viam-dotnet-sdk</ProjectUrl>
+    <PackageTags>viam</PackageTags>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 	</PropertyGroup>
 	<ItemGroup>
