--- a/src/Viam.Core/Viam.Core.csproj
+++ b/src/Viam.Core/Viam.Core.csproj
@@ -5,13 +5,16 @@
     <LangVersion>latest</LangVersion>
     <TrimmerSingleWarn>false</TrimmerSingleWarn>
     <Platforms>AnyCPU</Platforms>
-    <VersionPrefix>0.0.0-dev</VersionPrefix>
+    <VersionPrefix>0.0.13-dev</VersionPrefix>
 
     <PackageId>Viam.Core</PackageId>
     <Authors>Viam</Authors>
     <Description>Viam Core Library</Description>
     <ProjectUrl>https://github.com/viamrobotics/viam-dotnet-sdk</ProjectUrl>
     <PackageTags>viam</PackageTags>
+    <IncludeSymbols>true</IncludeSymbols>
+    <IncludeSource>true</IncludeSource>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="Protos\**" />
