--- a/src/Viam.Serialization/Viam.Serialization.csproj
+++ b/src/Viam.Serialization/Viam.Serialization.csproj
@@ -5,7 +5,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>latest</LangVersion>
     <Nullable>enable</Nullable>
-    <VersionPrefix>0.0.0-dev</VersionPrefix>
+    <VersionPrefix>0.0.13-dev</VersionPrefix>
 
     <PackageId>Viam.Serialization</PackageId>
     <Authors>Viam</Authors>
@@ -13,6 +13,9 @@
     <ProjectUrl>https://github.com/viamrobotics/viam-dotnet-sdk</ProjectUrl>
     <PackageTags>viam serialization</PackageTags>
     <Tags>analyzer;source-generator;attributes;serialization</Tags>
+    <IncludeSymbols>true</IncludeSymbols>
+    <IncludeSource>true</IncludeSource>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
