--- a/src/Viam.Core/Viam.Core.csproj
+++ b/src/Viam.Core/Viam.Core.csproj
@@ -5,7 +5,10 @@
     <LangVersion>latest</LangVersion>
     <TrimmerSingleWarn>false</TrimmerSingleWarn>
     <Platforms>AnyCPU</Platforms>
-    <VersionPrefix>0.0.0-dev</VersionPrefix>
+    <VersionPrefix>0.0.25-dev</VersionPrefix>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <CopyDebugSymbolFilesFromPackages>true</CopyDebugSymbolFilesFromPackages>
+    <CopyDocumentationFilesFromPackages>true</CopyDocumentationFilesFromPackages>
 
     <PackageId>Viam.Core</PackageId>
     <Authors>Viam</Authors>
