--- a/src/Viam.ModularResources/Viam.ModularResources.csproj
+++ b/src/Viam.ModularResources/Viam.ModularResources.csproj
@@ -9,6 +9,9 @@
 		<Platforms>AnyCPU</Platforms>
 		<IsPackable>true</IsPackable>
     <VersionPrefix>0.0.0-dev</VersionPrefix>
+    <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
+    <CopyDebugSymbolFilesFromPackages>true</CopyDebugSymbolFilesFromPackages>
+    <CopyDocumentationFilesFromPackages>true</CopyDocumentationFilesFromPackages>
 
     <PackageId>Viam.ModularResources</PackageId>
     <Authors>Viam</Authors>
