--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -61,6 +61,9 @@ jobs:
             echo "name=$PACKAGE_ID" >> "$GITHUB_OUTPUT"
             echo "base=$ARTIFACT_BASE" >> "$GITHUB_OUTPUT"
 
+      - name: Hydrate Proto files
+        run: dotnet build src/Viam.Contracts/Viam.Contracts.csproj -t:ExportProtos
+
       - name: Build
         run: dotnet build -c Debug /p:Version=${{ steps.set_version.outputs.version }} /p:PackageVersion=${{ steps.set_version.outputs.version }} /p:SymbolPackageFormat=snupkg /p:IncludeSymbols=true ${{ matrix.project }}
 
